[package]
name = "notcraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# [profile.release]
# strip = true
# lto = "thin"
# codegen-units = 1

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
cbindgen = "0.25.0"
env_logger = "0.10.0"
log = "0.4.20"
rlua = "0.19.7"
