[workspace]
members = [".", "./crates/*"]

[package]
name = "notcraft"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
lto = "thin"
codegen-units = 10

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
env_logger = "0.10.0"
log = "0.4.20"
notcraft_lib = { path = "./crates/notcraft_lib" }
rlua = "0.19.7"
# notcraft_luabind = { path = "./crates/notcraft_luabind" } # On hold
notcraft_macros = { path = "./crates/notcraft_macros" }
notcraft_derive = { path = "./crates/notcraft_derive" }
anyhow = "1.0.75"
